# dashboard

./: .gitignore  Makefile  README.md  fetch_changes.sh  olddddcode  package-lock.json  package.json  pyproject.toml  requirements.txt  vite.config.ts
client/: index.html
client/src/: App.tsx  index.css
client/src/components/chatbot/: ai_summary_display.tsx  chatbot.tsx
client/src/components/dashboard/: FiltersContext.tsx  ai-recommendations.tsx  charts-grid.tsx  filters-panel.tsx  metrics-cards.tsx  product-rankings.tsx
client/src/components/layout/: sidebar.tsx
client/src/components/ui/: alert-dialog.tsx  alert.tsx
client/src/hooks/: useAISummary.ts  useChartInsight.ts
client/src/pages/: about.tsx  categories.tsx  category-products.tsx  dashboard.tsx  landing.tsx  login.tsx  not-found.tsx  product-details.tsx  revenue.tsx  sales.tsx  settings.tsx  signup.tsx  subscription.tsx
server_py/: Fastapi_main.py  config.py  crud.py  database_config.py  dataforseo_amazon.py  dataforseo_cron.py  init_db.py  models.py  rapidapi_amazon_collector.py  rest_client.py  run_scheduler.py  scheduler.py  scheduler_service.py  schemas.py  simple_cron_collector.py
server_py/data_output/: amazon_india_headphones_20251030_113532.csv  amazon_india_laptop_20251030_112517.csv  amazon_india_smartwatch_20251030_113854.csv  summary_20251029_173922.txt  summary_20251030_114549.txt
server_py/routers/: analytics.py  auth.py  users.py
